# torch2jax

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  install_package_aliased.py  jit_compile.ipynb  make_aliased_package.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci-build.yml  python-package.yml
api/torch2jax/: index.html
api/torch2jax_with_vjp/: index.html
api/utils/: index.html
changelog/: index.html
docs/: changelog.md  index.md  installation.md  roadmap.md
docs/api/: torch2jax.md  torch2jax_with_vjp.md  utils.md
docs/examples/: bert_example.md  data_parallel.md  resnet_example.md
examples/: bert_example.ipynb  bert_from_jax.ipynb  data_parallel.py  input_output_specification.ipynb  resnet_example.ipynb
examples/bert_example/: index.html
examples/data_parallel/: index.html
experiments/: time_difference.py
installation/: index.html
roadmap/: index.html
scripts/: _install_and_test.sh  make_aliased_package.py  test.sh  test_in_docker.sh
search/: search_index.json
src/cpp/: torch_call.cu  (+1 more)
tests/: pure_callback_alternative.py  test_compilation.py  test_dlpack_transfer.py  test_fn_wrapping.py  test_grad_fallback.py  test_interface.py  test_memory_inplace.py  test_multi_gpu.py  test_nondiff_args.py  test_torch2jax_fn_wrapping.py  test_torch2jax_interface.py  test_torch2jax_with_vjp.py  test_transform_under_jit.py  test_vmap.py  test_with_vjp.py  utils.py
torch2jax/: __init__.py  api.py  compat.py  compile.py  dlpack_passing.py  gradients.py  lowering_rule.py  utils.py
(+14 files in other folders)
