[project]
name = "torch2jax"
version = "0.6.0"
authors = [
  { name="Robert Dyro", email="robert.dyro@gmail.com" },
]
description = "Wrap your PyTorch for JAX! This package allows no-copy PyTorch calling from JAX under both eager execution and JIT."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "jax",
    "torch",
]

[tool.setuptools.package-data]
torch2jax = ["cpp/*"]

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/rdyro/torch2jax"
"Bug Tracker" = "https://github.com/rdyro/torch2jax"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E731",  # allow lambda-s instead of def-s
]
